@@ -525,7 +525,7 @@ class EventServiceImplTest {
     void getAllUserOfflineEventsWithoutUserGeoPosition() {
         String eventType = "OFFLINE";
         List<Event> eventsOffline = List.of(ModelUtils.getEvent());
-        List<Long> eventIds = List.of(eventsOffline.get(0).getId());
+        List<Long> eventIds = List.of(eventsOffline.getFirst().getId());
         EventDto expected = ModelUtils.getEventDto();
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, 1);
@@ -566,7 +566,7 @@ class EventServiceImplTest {
         String userLatitude = "50.42929";
         String userLongitude = "30.53806";
         List<Event> eventsOffline = List.of(ModelUtils.getOfflineOnlineEventIfEventFinalDateToday());
-        List<Long> eventIds = List.of(eventsOffline.get(0).getId());
+        List<Long> eventIds = List.of(eventsOffline.getFirst().getId());
         EventDto expected = ModelUtils.getEventDto();
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, 1);
@@ -605,7 +605,7 @@ class EventServiceImplTest {
     void getAllUserEventsWithoutParams() {
         String eventType = "";
         List<Event> events = List.of(ModelUtils.getOnlineEvent());
-        List<Long> eventIds = List.of(events.get(0).getId());
+        List<Long> eventIds = List.of(events.getFirst().getId());
         List<EventDto> expected = List.of(ModelUtils.getEventDto());
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, 1);
@@ -628,8 +628,8 @@ class EventServiceImplTest {
         List<EventDto> actual = eventDtoPageableAdvancedDto.getPage();
 
         assertEquals(expected.size(), actual.size());
-        assertFalse(actual.get(0).isFavorite());
-        assertTrue(actual.get(0).isSubscribed());
+        assertFalse(actual.getFirst().isFavorite());
+        assertTrue(actual.getFirst().isSubscribed());
 
         verify(restClient).findByEmail(principal.getName());
         verify(eventRepo).findAllByAttender(TEST_USER_VO.getId());
@@ -646,7 +646,7 @@ class EventServiceImplTest {
         String eventType = "ONLINE";
         List<Event> eventsOnline = List.of(ModelUtils.getOnlineEvent(),
             ModelUtils.getSecondEvent());
-        List<Long> eventIds = List.of(eventsOnline.get(0).getId(), eventsOnline.get(1).getId());
+        List<Long> eventIds = List.of(eventsOnline.getFirst().getId(), eventsOnline.get(1).getId());
         List<EventDto> expected = List.of(ModelUtils.getEventDto(),
             ModelUtils.getEventWithoutAddressDto());
         expected.get(1).setId(2L);
@@ -668,8 +668,6 @@ class EventServiceImplTest {
             eventService.getAllUserEvents(
                 pageRequest, principal.getName(), "", "", eventType);
         List<EventDto> actual = eventDtoPageableAdvancedDto.getPage();
-
-        assertEquals(expected.get(0), actual.get(0));
         actual.forEach(eventDto -> {
             assertFalse(eventDto.isFavorite());
             assertFalse(eventDto.isSubscribed());
@@ -761,8 +759,6 @@ class EventServiceImplTest {
             eventService.getAllUserEvents(
                 pageRequest, principal.getName(), "", "", eventType);
         List<EventDto> actual = eventDtoPageableAdvancedDto.getPage();
-
-        assertTrue(expected.contains(actual.get(0)));
         assertTrue(expected.contains(actual.get(1)));
         actual.forEach(eventDto -> {
             assertTrue(eventDto.isFavorite());
@@ -796,7 +792,7 @@ class EventServiceImplTest {
     @Test
     void getEventsCreatedByUser() {
         List<Event> events = List.of(ModelUtils.getEvent(), ModelUtils.getSecondEvent());
-        List<Long> eventIds = List.of(events.get(0).getId());
+        List<Long> eventIds = List.of(events.getFirst().getId());
         EventDto expected = ModelUtils.getEventDto();
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, 2);
@@ -809,10 +805,8 @@ class EventServiceImplTest {
         when(modelMapper.map(events,
             new TypeToken<List<EventDto>>() {
             }.getType())).thenReturn(List.of(expected));
-        when(eventRepo.findFavoritesAmongEventIds(eventIds, user.getId()))
-            .thenReturn(List.of(events.get(0)));
-        when(eventRepo.findSubscribedAmongEventIds(eventIds, user.getId()))
-            .thenReturn(List.of(events.get(0)));
+        when(eventRepo.findFavoritesAmongEventIds(eventIds, user.getId())).thenReturn(events);
+        when(eventRepo.findSubscribedAmongEventIds(eventIds, user.getId())).thenReturn(events);
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto =
             eventService.getEventsCreatedByUser(pageRequest, principal.getName());
@@ -831,7 +825,7 @@ class EventServiceImplTest {
     @Test
     void getRelatedToUserEvents() {
         List<Event> events = List.of(ModelUtils.getEvent(), ModelUtils.getSecondEvent());
-        List<Long> eventIds = List.of(events.get(0).getId(), events.get(1).getId());
+        List<Long> eventIds = List.of(events.getFirst().getId(), events.get(1).getId());
         List<EventDto> expected = List.of(ModelUtils.getEventDto(), ModelUtils.getSecondEventDto());
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, events.size());
@@ -1164,7 +1158,7 @@ class EventServiceImplTest {
     @Test
     void getAllWithCurrentUser() {
         List<Event> events = List.of(ModelUtils.getEvent());
-        List<Long> eventIds = List.of(events.get(0).getId());
+        List<Long> eventIds = List.of(events.getFirst().getId());
         EventDto expected = ModelUtils.getEventDto();
         Principal principal = ModelUtils.getPrincipal();
         PageRequest pageRequest = PageRequest.of(0, 1);
